refactor : jdk 버전으로 인한 List.of -> Arrays.asList 변경